--- a/Project-1 Netflix Clone/CSS/style.css
+++ b/Project-1 Netflix Clone/CSS/style.css
@@ -137,7 +137,7 @@ img {
   cursor: pointer;
 }
 
-.tabs-border {
+.tab-border {
   border-bottom: var(--primary-color) 4px solid;
 }
 
@@ -146,6 +146,17 @@ img {
   padding: 3rem;
   color: #fff;
   background: #000;
+}
+
+/* Hide Content */
+#tab-1-content,
+#tab-2-content,
+#tab-3-content {
+  display: none;
+}
+
+.show {
+  display: block !important;
 }
 
 #tab-1-content .tab-1-content-inner {
@@ -293,6 +304,10 @@ img {
   font-size: 1rem;
   padding: 0.8rem 1.3rem;
   text-transform: uppercase;
+}
+
+.btn-icon {
+  margin-left: 1rem;
 }
 
 @media (max-width: 960px) {
