--- a/Project-2 Social Network Theme/scss/_config.scss
+++ b/Project-2 Social Network Theme/scss/_config.scss
@@ -7,7 +7,7 @@ $max-width: 1100px;
 
 //set text color based on background
 @function set-text-color($color) {
-  @if (lightness($color) > 50) {
+  @if (lightness($color) > 60) {
     @return #333;
   } @else {
     @return #fff;
@@ -18,4 +18,22 @@ $max-width: 1100px;
 @mixin set-background($color) {
   background-color: $color;
   color: set-text-color($color);
+}
+
+//margin & padding
+$spaceamounts: (1, 2, 3, 4, 5);
+
+@each $space in $spaceamounts {
+  .m-#{$space} {
+    margin: #{$space}rem;
+  }
+  .my-#{$space} {
+    margin: #{$space}rem 0;
+  }
+  .p-#{$space} {
+    margin: #{$space}rem;
+  }
+  .py-#{$space} {
+    margin: #{$space}rem 0;
+  }
 }
