--- a/Project-2 Social Network Theme/scss/style.scss
+++ b/Project-2 Social Network Theme/scss/style.scss
@@ -75,3 +75,37 @@ img {
     text-align: center;
   }
 }
+
+//profiles page
+.profile {
+  display: grid;
+  grid-template-columns: 2fr 4fr 2fr;
+  grid-gap: 2rem;
+  align-items: center;
+  padding: 1rem;
+  line-height: 1.8;
+  margin-bottom: 1rem;
+}
+
+//profile page
+.profile-grid {
+  display: grid;
+  grid-template-areas: "top top" "about about" "exp edu" "github github";
+  grid-gap: 1rem;
+
+  .profile-top {
+    grid-area: top;
+  }
+  .profile-about {
+    grid-area: about;
+  }
+  .profile-exp {
+    grid-area: exp;
+  }
+  .profile-edu {
+    grid-area: edu;
+  }
+  .profile-github {
+    grid-area: github;
+  }
+}
