--- a/Project-2 Social Network Theme/scss/_config.scss
+++ b/Project-2 Social Network Theme/scss/_config.scss
@@ -31,9 +31,9 @@ $spaceamounts: (1, 2, 3, 4, 5);
     margin: #{$space}rem 0;
   }
   .p-#{$space} {
-    margin: #{$space}rem;
+    padding: #{$space}rem;
   }
   .py-#{$space} {
-    margin: #{$space}rem 0;
+    padding: #{$space}rem 0;
   }
 }
