--- a/Project-2 Social Network Theme/scss/style.scss
+++ b/Project-2 Social Network Theme/scss/style.scss
@@ -40,7 +40,7 @@ img {
   width: 100%;
   top: 0;
   border-bottom: solid 1px $primary-color;
-  opacity: 0.9;
+  opacity: 1;
 
   ul {
     display: flex;
@@ -190,3 +190,5 @@ img {
     width: 150px;
   }
 }
+
+@import "mobile";
